--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
@@ -29,7 +29,7 @@
   "sn46.3:7.2": "Über diesen versunkenen Geist wacht er sorgfältig. ",
   "sn46.3:8.1": "Zu einer solchen Zeit hat ein Mönch den Faktor des Erwachens Gleichmut in Gang gesetzt; er entwickelt ihn und vervollkommnet ihn. ",
   "sn46.3:9.1": "Wenn die sieben Faktoren des Erwachens auf diese Art entwickelt und gepflegt werden, kann man siebenfache Frucht und siebenfachen Segen erwarten. ",
-  "sn46.3:9.2": "Welche sieben? ",
+  "sn46.3:9.2": "Welche siebenfache Frucht und welcher siebenfachen Segen? ",
   "sn46.3:9.3": "Man erlangt beizeiten in diesem Leben Erleuchtung. ",
   "sn46.3:9.4": "Wenn nicht, erlangt man Erleuchtung zur zeit des Todes. ",
   "sn46.3:9.5": "Wenn nicht, erlischt man mit dem Auflösen der fünf niederen Fesseln zwischen zwei Leben. ",
