--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
@@ -36,5 +36,6 @@
   "sn46.3:9.6": "Wenn nicht, erlischt man mit dem Auflösen der fünf niederen Fesseln beim Auftreffen. ",
   "sn46.3:9.7": "Wenn nicht, erlischt man mit dem Auflösen der fünf niederen Fesseln ohne zusätzliche Anstrengung. ",
   "sn46.3:9.8": "Wenn nicht, erlischt man mit dem Auflösen der fünf niederen Fesseln mit zusätzlicher Anstrengung. ",
-  "sn46.3:9.9": "Wenn nicht, geht man mit dem Auflösen der fünf niederen Fesseln stromaufwärts zum Akaniṭṭha-Bereich. "
+  "sn46.3:9.9": "Wenn nicht, geht man mit dem Auflösen der fünf niederen Fesseln stromaufwärts zum Akaniṭṭha-Bereich. ",
+  "sn46.3:9.10": "Wenn die sieben Faktoren des Erwachens auf diese Art entwickelt und gepflegt werden, kann man diese siebenfache Frucht und diesen siebenfachen Segen erwarten. "
 }
