--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.3_translation-de-sabbamitta.json
@@ -31,7 +31,7 @@
   "sn46.3:9.1": "Wenn die sieben Faktoren des Erwachens auf diese Art entwickelt und gepflegt werden, kann man siebenfache Frucht und siebenfachen Segen erwarten. ",
   "sn46.3:9.2": "Welche siebenfache Frucht und welcher siebenfachen Segen? ",
   "sn46.3:9.3": "Man erlangt beizeiten in diesem Leben Erleuchtung. ",
-  "sn46.3:9.4": "Wenn nicht, erlangt man Erleuchtung zur zeit des Todes. ",
+  "sn46.3:9.4": "Wenn nicht, erlangt man Erleuchtung zur Zeit des Todes. ",
   "sn46.3:9.5": "Wenn nicht, erlischt man mit dem Auflösen der fünf niederen Fesseln zwischen zwei Leben. ",
   "sn46.3:9.6": "Wenn nicht, erlischt man mit dem Auflösen der fünf niederen Fesseln beim Auftreffen. ",
   "sn46.3:9.7": "Wenn nicht, erlischt man mit dem Auflösen der fünf niederen Fesseln ohne zusätzliche Anstrengung. ",
