--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -713,7 +713,7 @@
   "pli-tv-kd13:19.1.48": "which it did. ",
   "pli-tv-kd13:19.1.49": "He then asked the Sangha to give him probation for that offense, simultaneous with the probation for the previous offense, ",
   "pli-tv-kd13:19.1.50": "which it did. ",
-  "pli-tv-kd13:19.1.51": "When he had completed that probation, while deserving the trial period of six days, he committed one offense of intentional emission of semen, concealed for five days. ",
+  "pli-tv-kd13:19.1.51": "When he had completed that probation, while deserving the trial period, he committed one offense of intentional emission of semen, concealed for five days. ",
   "pli-tv-kd13:19.1.52": "He asked the Sangha to send him back to the beginning for that offense, ",
   "pli-tv-kd13:19.1.53": "which it did. ",
   "pli-tv-kd13:19.1.54": "He then asked the Sangha to give him probation for that offense, simultaneous with the probation for the previous offense, ",
