--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1313,7 +1313,7 @@
   "pli-tv-kd13:28.1.15": "He’s to be sent back to the beginning. ",
   "pli-tv-kd13:28.1.16": "He should then be given probation according to the length of the concealment of those offenses and simultaneously with the probation for the previous offense. ",
   "pli-tv-kd13:28.2.1": "It may be that a monk who deserves the trial period … ",
-  "pli-tv-kd13:28.2.2": "who’s undertaking the trial period of six days … ",
+  "pli-tv-kd13:28.2.2": "who’s undertaking the trial period … ",
   "pli-tv-kd13:28.2.3": "(to be expanded as for probation) … ",
   "pli-tv-kd13:28.2.4": "who deserves rehabilitation commits a number of offenses entailing suspension, unconcealed and specified … ",
   "pli-tv-kd13:28.2.5": "concealed and specified … ",
