--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1330,7 +1330,7 @@
   "pli-tv-kd13:29.1.0": "5. The group of one hundred on the trial period ",
   "pli-tv-kd13:29.1.1": "“It may be that a monk commits a number of unconcealed offenses entailing suspension and then disrobes. ",
   "pli-tv-kd13:29.1.2": "Being re-ordained, he doesn’t conceal them. ",
-  "pli-tv-kd13:29.1.3": "He should be given the trial period of six days. ",
+  "pli-tv-kd13:29.1.3": "He should be given the trial period. ",
   "pli-tv-kd13:29.1.4": "It may be that a monk commits a number of unconcealed offenses entailing suspension and then disrobes. ",
   "pli-tv-kd13:29.1.5": "Being re-ordained, he conceals them. ",
   "pli-tv-kd13:29.1.6": "He should be given probation according to the length of the subsequent concealment of those offenses, and he should then be given the trial period of six days. ",
