--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1336,7 +1336,7 @@
   "pli-tv-kd13:29.1.6": "He should be given probation according to the length of the subsequent concealment of those offenses, and he should then be given the trial period. ",
   "pli-tv-kd13:29.1.7": "It may be that a monk commits a number of concealed offenses entailing suspension and then disrobes. ",
   "pli-tv-kd13:29.1.8": "Being re-ordained, he doesn’t conceal them. ",
-  "pli-tv-kd13:29.1.9": "He should be given probation according to the length of the earlier concealment of those offenses, and he should then be given the trial period of six days. ",
+  "pli-tv-kd13:29.1.9": "He should be given probation according to the length of the earlier concealment of those offenses, and he should then be given the trial period. ",
   "pli-tv-kd13:29.1.10": "It may be that a monk commits a number of concealed offenses entailing suspension and then disrobes. ",
   "pli-tv-kd13:29.1.11": "Being re-ordained, he conceals them. ",
   "pli-tv-kd13:29.1.12": "He should be given probation according to the length of the earlier and subsequent concealment of those offenses, and he should then be given the trial period of six days. ",
