--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1352,8 +1352,8 @@
   "pli-tv-kd13:29.2.11": "It may be that a monk commits a number of offenses entailing suspension, ",
   "pli-tv-kd13:29.2.12": "both concealed and unconcealed, ",
   "pli-tv-kd13:29.2.13": "and then disrobes. Being re-ordained, he conceals those offenses he previously concealed, ",
-  "pli-tv-kd13:29.2.14": "but he doesn’t conceal those offenses he previously didn’t conceal. ",
-  "pli-tv-kd13:29.2.15": "He should be given probation according to the length of the earlier and subsequent concealment of those offenses, and he should then be given the trial period of six days. ",
+  "pli-tv-kd13:29.2.14": "but doesn’t conceal those offenses he previously didn’t conceal. ",
+  "pli-tv-kd13:29.2.15": "He should be given probation according to the length of the earlier and subsequent concealment of those offenses, and he should then be given the trial period. ",
   "pli-tv-kd13:29.2.16": "It may be that a monk commits a number of offenses entailing suspension, ",
   "pli-tv-kd13:29.2.17": "both concealed and unconcealed, ",
   "pli-tv-kd13:29.2.18": "and then disrobes. Being re-ordained, he conceals all of them. ",
