--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1713,7 +1713,7 @@
   "pli-tv-kd13:35.1.6": "which it does. The legal procedure is legitimate, irreversible, and fit to stand. The Sangha gives him the simultaneous probation legitimately, ",
   "pli-tv-kd13:35.1.7": "but then gives him the trial period and the rehabilitation illegitimately. ",
   "pli-tv-kd13:35.1.8": "He’s not purified of those offenses. ",
-  "pli-tv-kd13:35.1.9": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, both of the same sort and of various sorts. ",
+  "pli-tv-kd13:35.1.9": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both having the same name and having different names, both of the same kind and of different kinds, both of the same sort and of different sorts. ",
   "pli-tv-kd13:35.1.10": "He asks the Sangha for simultaneous probation for those offenses, ",
   "pli-tv-kd13:35.1.11": "which he gets. ",
   "pli-tv-kd13:35.1.12": "While on probation, he commits a number of offenses entailing suspension—specified and concealed. ",
