--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1718,10 +1718,10 @@
   "pli-tv-kd13:35.1.11": "which he gets. ",
   "pli-tv-kd13:35.1.12": "While on probation, he commits a number of offenses entailing suspension, concealed and specified. ",
   "pli-tv-kd13:35.1.13": "He asks the Sangha to send him back to the beginning for those offenses, ",
-  "pli-tv-kd13:35.1.14": "and it does. The legal procedure is legitimate, irreversible, and fit to stand. And the Sangha gives him simultaneous probation legitimately. ",
-  "pli-tv-kd13:35.1.15": "It then gives him the trial period of six days illegitimately, and the rehabilitation illegitimately. ",
-  "pli-tv-kd13:35.1.16": "He’s not purified from those offenses. ",
-  "pli-tv-kd13:35.1.17": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, both of the same sort and of various sorts. ",
+  "pli-tv-kd13:35.1.14": "which it does. The legal procedure is legitimate, irreversible, and fit to stand. The Sangha gives him the simultaneous probation legitimately, ",
+  "pli-tv-kd13:35.1.15": "but then gives him the trial period and the rehabilitation illegitimately. ",
+  "pli-tv-kd13:35.1.16": "He’s not purified of those offenses. ",
+  "pli-tv-kd13:35.1.17": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both having the same name and having different names, both of the same kind and of different kinds, both of the same sort and of different sorts. ",
   "pli-tv-kd13:35.1.18": "He asks the Sangha for simultaneous probation for those offenses, ",
   "pli-tv-kd13:35.1.19": "which he gets. ",
   "pli-tv-kd13:35.1.20": "While on probation, he commits a number of offenses entailing suspension—specified and both concealed and unconcealed. ",
