--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1731,9 +1731,9 @@
   "pli-tv-kd13:35.2.1": "“It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both having the same name and having different names, both of the same kind and of different kinds, both of the same sort and of different sorts. ",
   "pli-tv-kd13:35.2.2": "He asks the Sangha for simultaneous probation for those offenses, ",
   "pli-tv-kd13:35.2.3": "which he gets. ",
-  "pli-tv-kd13:35.2.4": "While on probation, he commits a number of offenses entailing suspension—unspecified and unconcealed … ",
-  "pli-tv-kd13:35.2.5": "unspecified and concealed … ",
-  "pli-tv-kd13:35.2.6": "unspecified and both concealed and unconcealed … ",
+  "pli-tv-kd13:35.2.4": "While on probation, he commits a number of offenses entailing suspension, unconcealed and unspecified … ",
+  "pli-tv-kd13:35.2.5": "concealed and unspecified … ",
+  "pli-tv-kd13:35.2.6": "both concealed and unconcealed and unspecified … ",
   "pli-tv-kd13:35.2.7": "unconcealed and both specified and unspecified. ",
   "pli-tv-kd13:35.2.8": "He asks the Sangha to send him back to the beginning for those offenses, ",
   "pli-tv-kd13:35.2.9": "and it does. The legal procedure is legitimate, irreversible, and fit to stand. And the Sangha gives him simultaneous probation legitimately. ",
