--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1752,11 +1752,11 @@
   "pli-tv-kd13:35.2.22": "which he gets. ",
   "pli-tv-kd13:35.2.23": "While on probation, he commits a number of offenses entailing suspension, both concealed and unconcealed and both specified and unspecified. ",
   "pli-tv-kd13:35.2.24": "He asks the Sangha to send him back to the beginning for those offenses, ",
-  "pli-tv-kd13:35.2.25": "and it does. The legal procedure is legitimate, irreversible, and fit to stand. ",
-  "pli-tv-kd13:35.2.26": "And the Sangha gives him simultaneous probation legitimately. ",
-  "pli-tv-kd13:35.2.27": "It then gives him the trial period of six days illegitimately, ",
+  "pli-tv-kd13:35.2.25": "which it does. The legal procedure is legitimate, irreversible, and fit to stand. ",
+  "pli-tv-kd13:35.2.26": "The Sangha gives him the simultaneous probation legitimately, ",
+  "pli-tv-kd13:35.2.27": "but then gives him the trial period  ",
   "pli-tv-kd13:35.2.28": "and the rehabilitation illegitimately. ",
-  "pli-tv-kd13:35.2.29": "He’s not purified from those offenses.” ",
+  "pli-tv-kd13:35.2.29": "He’s not purified of those offenses.” ",
   "pli-tv-kd13:35.2.30": "The group of nine on unpurified with sending back to the beginning is finished. ",
   "pli-tv-kd13:36.1.0": "10. The second group of nine ",
   "pli-tv-kd13:36.1.1": "“It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, ",
