--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1759,14 +1759,14 @@
   "pli-tv-kd13:35.2.29": "He’s not purified of those offenses.” ",
   "pli-tv-kd13:35.2.30": "The group of nine on unpurified with sending back to the beginning is finished. ",
   "pli-tv-kd13:36.1.0": "10. The second group of nine ",
-  "pli-tv-kd13:36.1.1": "“It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, ",
-  "pli-tv-kd13:36.1.2": "both of the same sort and of various sorts. ",
+  "pli-tv-kd13:36.1.1": "“It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both having the same name and having different names, both of the same kind and of different kinds, ",
+  "pli-tv-kd13:36.1.2": "both of the same sort and of different sorts. ",
   "pli-tv-kd13:36.1.3": "He asks the Sangha for simultaneous probation for those offenses, ",
-  "pli-tv-kd13:36.1.4": "which he gets. While on probation, he commits a number of offenses entailing suspension—specified and unconcealed. ",
+  "pli-tv-kd13:36.1.4": "which he gets. While on probation, he commits a number of offenses entailing suspension, unconcealed and specified. ",
   "pli-tv-kd13:36.1.5": "He asks the Sangha to send him back to the beginning for those offenses, ",
-  "pli-tv-kd13:36.1.6": "and it does. But the legal procedure is illegitimate, reversible, and unfit to stand. And the Sangha gives him simultaneous probation illegitimately. ",
-  "pli-tv-kd13:36.1.7": "It then gives him the trial period of six days legitimately, and the rehabilitation legitimately. ",
-  "pli-tv-kd13:36.1.8": "He’s not purified from those offenses. ",
+  "pli-tv-kd13:36.1.6": "which it does. But the legal procedure is illegitimate, reversible, and unfit to stand. The Sangha gives him the simultaneous probation illegitimately, ",
+  "pli-tv-kd13:36.1.7": "but then gives him the trial period and the rehabilitation legitimately. ",
+  "pli-tv-kd13:36.1.8": "He’s not purified of those offenses. ",
   "pli-tv-kd13:36.1.9": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, ",
   "pli-tv-kd13:36.1.10": "both of the same sort and of various sorts. ",
   "pli-tv-kd13:36.1.11": "He asks the Sangha for simultaneous probation for those offenses, ",
