--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1771,11 +1771,11 @@
   "pli-tv-kd13:36.1.10": "both of the same sort and of different sorts. ",
   "pli-tv-kd13:36.1.11": "He asks the Sangha for simultaneous probation for those offenses, ",
   "pli-tv-kd13:36.1.12": "which he gets. ",
-  "pli-tv-kd13:36.1.13": "While on probation, he commits a number of offenses entailing suspension—specified and concealed. ",
+  "pli-tv-kd13:36.1.13": "While on probation, he commits a number of offenses entailing suspension, concealed and specified. ",
   "pli-tv-kd13:36.1.14": "He asks the Sangha to send him back to the beginning for those offenses, ",
-  "pli-tv-kd13:36.1.15": "and it does. But the legal procedure is illegitimate, reversible, and unfit to stand. And the Sangha gives him simultaneous probation illegitimately. ",
-  "pli-tv-kd13:36.1.16": "It then gives him the trial period of six days legitimately, and the rehabilitation legitimately. ",
-  "pli-tv-kd13:36.1.17": "He’s not purified from those offenses. ",
+  "pli-tv-kd13:36.1.15": "which it does. But the legal procedure is illegitimate, reversible, and unfit to stand. The Sangha gives him the simultaneous probation illegitimately, ",
+  "pli-tv-kd13:36.1.16": "but then gives him the trial period and the rehabilitation legitimately. ",
+  "pli-tv-kd13:36.1.17": "He’s not purified of those offenses. ",
   "pli-tv-kd13:36.1.18": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, ",
   "pli-tv-kd13:36.1.19": "both of the same sort and of various sorts. ",
   "pli-tv-kd13:36.1.20": "He asks the Sangha for simultaneous probation for those offenses, ",
